Update Homework 6 Problems_ Group xx.html

--- a/Homework 6 Problems_ Group xx.html
+++ b/Homework 6 Problems_ Group xx.html
@@ -1,12 +1,11 @@
-
   Programming as a Way of Life
   Homework 6 Problems
 
 
     Group xx
-    Group Member 1 Name
-    Group Member 2 Name
-    Group Member 3 Name
+    Whitney Barber
+    Alejandro Chavez
+    Zach Adam
 
 
       Problem 3 (Concept Title)
