Update Homework 6 Problems_ Group xx.html

--- a/Homework 6 Problems_ Group xx.html
+++ b/Homework 6 Problems_ Group xx.html
@@ -2,16 +2,18 @@
   Homework 6 Problems
 
 
-    Group xx
+    Group 24
     Whitney Barber
     Alejandro Chavez
-    Zach Adam
+    Zach Adams
 
 
-      Problem 3 (Concept Title)
-
-
-      Problem 4 (Concept Title)
+      Problem 3: Dictionay
+        Create a dictionary that maps each state to its edge.
+      
+    
+      Problem 4: Define varibles
+        Define the variables state and edge within the scope of the state_edges function.
 
 
       Problem 5 (Concept Title)
